--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,34 @@
 /* Hero */
 
 .hero {
-  background-color: var(--primary-footer-bg-color);
+  position: relative;
+  display: flex;
+
+  max-width: 1600px;
+  margin: 0 auto;
+  padding: 200px 0;
+
+  background-color: var(--primary-hero-bg-color);
+  background-image: url(../images/teamwork.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   text-align: center;
-  padding-top: 200px;
-  padding-bottom: 200px;
+}
+
+.hero .container {
+  position: relative;
+}
+
+.hero::before {
+  display: inline-flex;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: var(--hero-shadow);
 }
 
 .hero__title {
