--- a/css/styles.css
+++ b/css/styles.css
@@ -91,6 +91,33 @@
   margin-right: 30px;
 }
 
+.benefits__item::before {
+  display: block;
+  height: 120px;
+  content: "";
+  margin-bottom: 30px;
+  background-color: var(--primary-filter-bg-color);
+
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.benefits__item:nth-child(1)::before {
+  background-image: url(../images/antenna.svg);
+}
+
+.benefits__item:nth-child(2)::before {
+  background-image: url(../images/clock.svg);
+}
+
+.benefits__item:nth-child(3)::before {
+  background-image: url(../images/diagram.svg);
+}
+
+.benefits__item:nth-child(4)::before {
+  background-image: url(../images/astronaut.svg);
+}
+
 .benefits__title {
   color: var(--title-text-color);
   font-size: 14px;
