--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -56,6 +56,11 @@
   margin-bottom: 30px;
 }
 
+.portfolio__item:hover {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
 .portfolio__card {
   border: 1px solid var(--primary-item-bg-color);
 }
