--- a/css/styles.css
+++ b/css/styles.css
@@ -65,7 +65,8 @@
 }
 
 .section__title,
-.team__title {
+.team__title,
+.client__title {
   color: var(--title-text-color);
   font-size: 36px;
   line-height: 1.2;
@@ -91,31 +92,14 @@
   margin-right: 30px;
 }
 
-.benefits__item::before {
-  display: block;
-  height: 120px;
-  content: "";
-  margin-bottom: 30px;
-
+.icon {
+  display: flex;
   background-color: var(--primary-filter-bg-color);
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-.benefits__item:nth-child(1)::before {
-  background-image: url(../images/antenna.svg);
-}
-
-.benefits__item:nth-child(2)::before {
-  background-image: url(../images/clock.svg);
-}
-
-.benefits__item:nth-child(3)::before {
-  background-image: url(../images/diagram.svg);
-}
-
-.benefits__item:nth-child(4)::before {
-  background-image: url(../images/astronaut.svg);
+  height: 120px;
+  border-radius: 4px;
+  margin-bottom: 30px;
+  justify-content: center;
+  align-items: center;
 }
 
 .benefits__title {
@@ -220,48 +204,62 @@
   margin-top: 16px;
 }
 
-.team__item {
-  display: inline-flex;
+.team__social-link {
+  display: flex;
   width: 44px;
   height: 44px;
+  justify-content: center;
+  align-items: center;
   border-radius: 50%;
-  background-color: var(--primary-black-color);
-  cursor: pointer;
+  color: var(--soc-icons-color);
+  background-color: var(--primary-white-color);
 }
 
-.team__social-link {
-  width: inherit;
-  height: inherit;
+.team__social-icon {
+  fill: currentColor;
 }
 
 .team__item:not(:last-child) {
   margin-right: 10px;
 }
 
-.team__item:nth-child(1) {
-  background-image: url(../images/instagram.svg);
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-.team__item:nth-child(2) {
-  background-image: url(../images/twitter.svg);
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-.team__item:nth-child(3) {
-  background-image: url(../images/facebook.svg);
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-.team__item:nth-child(4) {
-  background-image: url(../images/linkedin.svg);
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-.team__item:hover {
+.team__social-link:hover {
   background-color: var(--accent-color);
+  color: var(--primary-white-color);
+}
+
+/* CLIENTS */
+
+.client {
+  padding: 94px 0;
+  background-color: var(--primary-white-color);
+}
+
+.client__list {
+  display: flex;
+  justify-content: center;
+}
+
+.client__link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 170px;
+  height: 90px;
+  border: 1px solid var(--soc-icons-color);
+  border-radius: 4px;
+  color: var(--soc-icons-color);
+}
+
+.client__item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.client__icon {
+  fill: currentColor;
+}
+
+.client__link:hover {
+  border-color: var(--accent-color);
+  color: var(--accent-color);
 }
