--- a/css/common.css
+++ b/css/common.css
@@ -76,10 +76,10 @@ img {
   color: var(--primary-white-color);
 }
 
-.logo__footer-studio:hover,
 .logo__header-studio:hover,
-.logo__footer-studio:focus,
-.logo__header-studio:focus {
+.logo__header-studio:focus,
+.logo__footer-studio:hover,
+.logo__footer-studio:focus {
   color: var(--accent-color);
 }
 
@@ -191,7 +191,7 @@ img {
 /* FOOTER-SOCIALS */
 
 .social {
-  margin-top: 10px;
+  margin-top: 11px;
   margin-left: 70px;
 }
 
@@ -208,17 +208,8 @@ img {
   margin-bottom: 20px;
 }
 
-.social__item {
-  display: inline-flex;
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
-  background-color: var(--icon-bg-color);
-  cursor: pointer;
-}
-
-.social__item:hover {
-  background-color: var(--accent-color);
+.social__list {
+  display: flex;
 }
 
 .social__item:not(:last-child) {
@@ -231,8 +222,16 @@ img {
 
 .social__link {
   display: flex;
-  width: inherit;
-  height: inherit;
   justify-content: center;
   align-items: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-color: var(--icon-bg-color);
+  cursor: pointer;
+}
+
+.social__link:hover,
+.social__link:focus {
+  background-color: var(--accent-color);
 }
